# project-euler

./: .gitignore  Cargo.toml  flake.nix
common/src/: lib.rs
problem_14/: Cargo.toml
problem_14/src/: main.rs
problem_23/: Cargo.toml
problem_23/benches/: benchmarks.rs
problem_23/src/: lib.rs  main.rs  multiplicative_approach.rs
problem_23/src/get_abundant_numbers/: brute_force.rs  mod.rs  multiplicative_approach.rs
problem_23/src/proper_divisors/: mod.rs
problem_29/: Cargo.toml
problem_29/src/: main.rs
problem_30/: Cargo.toml  power_plotting.py
problem_30/src/: main.rs
problem_34/: Cargo.toml
problem_34/src/: main.rs
problem_37/: readme.md
problem_37/src/: main.rs
problem_44/: Cargo.toml  approach.typ  problem_44.py
problem_44/src/: main.rs
problem_45/: Cargo.toml
problem_45/src/: main.rs
problem_46/: Cargo.toml
problem_46/src/: main.rs
problem_47/: Cargo.toml
problem_47/src/: main.rs
problem_48/src/: main.rs
problem_49/: Cargo.toml
problem_49/src/: main.rs
problem_50/: Cargo.toml
problem_50/src/: main.rs
src/: main.rs
