[package]
name = "project-euler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  "problem_23",
  "problem_29",
  "problem_30",
  "problem_34",
  "problem_37",
  "problem_44",
  "problem_45",
  "problem_46",
]
